learned mixins extentions variables nesting imports

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,12 @@
-header{
-    background: blue;
-    color: white;
+
+@import "./variables";
+@import "./header";
+
+
+
+.contact{
+    margin: auto;
+    @extend header;
+    background: pink;
+    width: 100% - 10%;
 }
