--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,38 @@
-header {
-  background: blue;
-  color: white;
+header, .contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: #98bbf0;
+  color: #2c2828;
+  height: 100vh;
+}
+
+header button, .contact button {
+  background: #922e6c;
+}
+
+header button:hover, .contact button:hover {
+  background: #822fe0;
+}
+
+header button::after, .contact button::after {
+  content: " added content";
+}
+
+.contact {
+  margin: auto;
+  background: pink;
+  width: 90%;
 }
 /*# sourceMappingURL=style.css.map */
